src/objects/BGBK__Payment_Batch__c.object
<CustomObject>
    <description>A payment batch groups associated payments. For example, payments entered by an operator on a particular date.</description>
    <fields>
        <fullName>BGBK__BG_Status__c</fullName>
        <description>Default status is Open. Items cannot be added to the payment batch once the status is &apos;Reviewed&apos; or &apos;Posted&apos;</description>
        <inlineHelpText>Default status is Open. Items cannot be added to the payment batch once the status is &apos;Reviewed&apos; or &apos;Posted&apos;</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_Register__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Register</label>
        <referenceTo>Cash_Register__c</referenceTo>
        <relationshipLabel>Payment Batches</relationshipLabel>
        <relationshipName>Payment_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cashier_name__c</fullName>
        <label>Cashier name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Convenience_fees__c</fullName>
        <label>Convenience fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opening_Balance__c</fullName>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Startup__c</fullName>
        <label>Startup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <formula>Total__c - Startup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_In_Register_PB__c</fullName>
        <formula>Cash_Register__r.Total_Cash_in_Register_CC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cash In Register</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cash_In_Register__c</fullName>
        <label>Total Cash In Register</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Total_check_credit_card__c +  Total_Cash_In_Register__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_check_credit_card__c</fullName>
        <label>Total check + Credit card</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_credit_card__c</fullName>
        <formula>Total_credit_card_receipts__c - Convenience_fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total credit card</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_credit_card_receipts__c</fullName>
        <label>Total credit card receipts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Payment Batch</label>
    <listViews>
        <fullName>BGBK__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>